Adopt V3 Roles
Adopt cf-java-client-sap 2.5.0