@@ -35,7 +35,6 @@ import com.sap.cloudfoundry.client.facade.domain.CloudSpace;
 import com.sap.cloudfoundry.client.facade.domain.ImmutableCloudMetadata;
 import com.sap.cloudfoundry.client.facade.domain.ImmutableCloudOrganization;
 import com.sap.cloudfoundry.client.facade.domain.ImmutableCloudSpace;
-import com.sap.cloudfoundry.client.facade.domain.ImmutableUserRole;
 import com.sap.cloudfoundry.client.facade.domain.UserRole;
 
 class AuthorizationCheckerTest {
@@ -64,36 +63,44 @@ class AuthorizationCheckerTest {
     static Stream<Arguments> checkPermissionsUsingNamesTest() {
         return Stream.of(
                          // (0) User has a space developer role and has access
-                         Arguments.of(List.of(UserRole.SpaceRole.SPACE_DEVELOPER), true),
-                         // (1) User does not have any roles and has access
-                         Arguments.of(Collections.emptyList(), false),
-                         // (2) User does not have any roles and no access
+                         Arguments.of(List.of(UserRole.SPACE_DEVELOPER), true),
+                         // (1) User has org user & manager roles and no access
+                         Arguments.of(List.of(UserRole.ORGANIZATION_USER, UserRole.ORGANIZATION_MANAGER), false),
+                         // (2) User has a space manager & developer roles and has access
+                         Arguments.of(List.of(UserRole.SPACE_MANAGER, UserRole.SPACE_DEVELOPER), true),
+                         // (3) User does not have any roles and no access
                          Arguments.of(Collections.emptyList(), false));
     }
 
     static Stream<Arguments> checkPermissionUsingGuidsTest() {
         return Stream.of(
                          // (0) User has a space developer role and executes a non read-only request
-                         Arguments.of(List.of(UserRole.SpaceRole.SPACE_DEVELOPER), false, true),
+                         Arguments.of(List.of(UserRole.SPACE_DEVELOPER), false, true),
                          // (1) User does not have any roles and executes a non read-only request
                          Arguments.of(Collections.emptyList(), false, false),
                          // (2) User does not have any roles and executes a read-only request
                          Arguments.of(Collections.emptyList(), true, false),
                          // (3) User has a space auditor role and executes a non read-only request
-                         Arguments.of(List.of(UserRole.SpaceRole.SPACE_AUDITOR), false, false),
+                         Arguments.of(List.of(UserRole.SPACE_AUDITOR), false, false),
                          // (4) User has a space manager role and executes a non read-only request
-                         Arguments.of(List.of(UserRole.SpaceRole.SPACE_MANAGER), false, false),
+                         Arguments.of(List.of(UserRole.SPACE_MANAGER), false, false),
                          // (5) User has a space auditor role and executes a read-only request
-                         Arguments.of(List.of(UserRole.SpaceRole.SPACE_AUDITOR), true, true),
+                         Arguments.of(List.of(UserRole.SPACE_AUDITOR), true, true),
                          // (6) User has a space manager role and executes a read-only request
-                         Arguments.of(List.of(UserRole.SpaceRole.SPACE_MANAGER), true, true),
+                         Arguments.of(List.of(UserRole.SPACE_MANAGER), true, true),
                          // (7) User has a space developer role and executes a read-only request
-                         Arguments.of(List.of(UserRole.SpaceRole.SPACE_DEVELOPER), true, true));
+                         Arguments.of(List.of(UserRole.SPACE_DEVELOPER), true, true),
+                         // (8) User has a space auditor & manager roles and executes a read-only request
+                         Arguments.of(List.of(UserRole.SPACE_AUDITOR, UserRole.SPACE_MANAGER), true, true),
+                         // (9) User has a org user & manager roles and executes a read-only request
+                         Arguments.of(List.of(UserRole.ORGANIZATION_USER, UserRole.ORGANIZATION_MANAGER), true, false),
+                         // (10) User has a org user & manager roles and executes a read-only request
+                         Arguments.of(List.of(UserRole.ORGANIZATION_USER, UserRole.ORGANIZATION_MANAGER), false, false));
     }
 
     @ParameterizedTest
     @MethodSource
-    void checkPermissionsUsingNamesTest(List<UserRole.SpaceRole> spaceRoles, boolean shouldBeAuthorized) {
+    void checkPermissionsUsingNamesTest(List<UserRole> spaceRoles, boolean shouldBeAuthorized) {
         setUpMocks(spaceRoles, null);
         mockSpace();
         boolean isAuthorized = authorizationChecker.checkPermissions(getUserInfo(), ORG, SPACE, false);
@@ -102,13 +109,13 @@ class AuthorizationCheckerTest {
 
     @Test
     void checkPermissionsWithExceptionTest() {
-        setUpMocks(List.of(UserRole.SpaceRole.SPACE_DEVELOPER), new HttpClientErrorException(HttpStatus.BAD_REQUEST));
+        setUpMocks(List.of(UserRole.SPACE_DEVELOPER), new HttpClientErrorException(HttpStatus.BAD_REQUEST));
         assertThrows(Exception.class, () -> authorizationChecker.checkPermissions(getUserInfo(), ORG, SPACE, false));
     }
 
     @ParameterizedTest
     @MethodSource
-    void checkPermissionUsingGuidsTest(List<UserRole.SpaceRole> spaceRoles, boolean isReadOnly, boolean shouldBeAuthorized) {
+    void checkPermissionUsingGuidsTest(List<UserRole> spaceRoles, boolean isReadOnly, boolean shouldBeAuthorized) {
         setUpMocks(spaceRoles, null);
         boolean isAuthorized = authorizationChecker.checkPermissions(getUserInfo(), SPACE_ID.toString(), isReadOnly);
         assertEquals(shouldBeAuthorized, isAuthorized);
@@ -116,13 +123,13 @@ class AuthorizationCheckerTest {
 
     @Test
     void checkPermissionsWithExceptionTest2() {
-        setUpMocks(List.of(UserRole.SpaceRole.SPACE_DEVELOPER), new HttpClientErrorException(HttpStatus.BAD_REQUEST));
+        setUpMocks(List.of(UserRole.SPACE_DEVELOPER), new HttpClientErrorException(HttpStatus.BAD_REQUEST));
         assertThrows(Exception.class, () -> authorizationChecker.checkPermissions(getUserInfo(), SPACE_ID.toString(), false));
     }
 
     @Test
     void testCheckPermissionsWithNonUUIDSpaceIDString() {
-        setUpMocks(List.of(UserRole.SpaceRole.SPACE_DEVELOPER), null);
+        setUpMocks(List.of(UserRole.SPACE_DEVELOPER), null);
         AuditLoggingFacade mockAuditLoggingFacade = Mockito.mock(AuditLoggingFacade.class);
         AuditLoggingProvider.setFacade(mockAuditLoggingFacade);
         UserInfo userInfo = getUserInfo();
@@ -132,9 +139,8 @@ class AuthorizationCheckerTest {
         assertEquals(HttpStatus.NOT_FOUND, resultException.getStatus());
     }
 
-    private void setUpMocks(List<UserRole.SpaceRole> spaceRoles, Exception exception) {
-        UserRole userRole = getUserRole(spaceRoles);
-        when(client.getUserRoleBySpaceGuidAndUserGuid(SPACE_ID, USER_ID)).thenReturn(userRole);
+    private void setUpMocks(List<UserRole> spaceRoles, Exception exception) {
+        when(client.getUserRolesBySpaceAndUser(SPACE_ID, USER_ID)).thenReturn(spaceRoles);
         setUpException(exception);
         when(clientProvider.getControllerClient(getUserInfo().getName())).thenReturn(client);
         when(applicationConfiguration.getFssCacheUpdateTimeoutMinutes()).thenReturn(ApplicationConfiguration.DEFAULT_SPACE_DEVELOPER_CACHE_TIME_IN_SECONDS);
@@ -143,7 +149,7 @@ class AuthorizationCheckerTest {
     private void setUpException(Exception exception) {
         if (exception != null) {
             when(client.getSpace(ORG, SPACE)).thenThrow(exception);
-            when(client.getUserRoleBySpaceGuidAndUserGuid(SPACE_ID, USER_ID)).thenThrow(exception);
+            when(client.getUserRolesBySpaceAndUser(SPACE_ID, USER_ID)).thenThrow(exception);
         }
     }
 
@@ -166,12 +172,6 @@ class AuthorizationCheckerTest {
                                   .name(SPACE)
                                   .organization(organization)
                                   .build();
-    }
-
-    private UserRole getUserRole(List<UserRole.SpaceRole> spaceRoles) {
-        return ImmutableUserRole.builder()
-                                .spaceRoles(spaceRoles)
-                                .build();
     }
 
     private UserInfo getUserInfo() {
